# antivirus_BSO

./: .gitignore  CMakeLists.txt  build.sh
doc/: build_manpage.sh  manpage  manpage.md
examples/: hashes  malicious_file
src/: Scanner.cpp  Scanner.h  main.cpp  scanner.cpp  scanner.h  setup.cpp  setup.h
src/database/: Db.cpp  Db.h  db.cpp  db.h
src/directory_searching/: dirSearch.cpp  dirSearch.h
src/file/: file.cpp  file.h
src/hash/: sha256.cpp  sha256.h
